2003-06-26  Don Allingham  <dallingham@users.sourceforge.net>
	* src/plugins/IndivComplete.py: make compatible with BookReport
	* src/plugins/IndivSummary.py: changed style names to use colon qualifiers

2003-06-26  Tim Waugh  <twaugh@redhat.com>
	* src/plugins/WebPage.py: Fix gendex creation.
	* src/ImgManip.py: Seems to need the SIGCHLD handler resetting here
	to prevent EINTR causing traceback.
	* src/plugins/Ancestors.py: Cite sources.

2003-06-26  Don Allingham  <dallingham@users.sourceforge.net>
	* src/plugins/Makefile.am: Added BookReport.py

2003-06-26  Tim Waugh  <twaugh@redhat.com>
	* src/plugins/Ancestors.py: Include notes for principal names.
	Briefly list children from other marriages.  Make extra table
	cells for other spouses.

2003-06-25  Don Allingham  <dallingham@users.sourceforge.net>
	* src/plugins/ReadGedcom.py: removed unused variable
	* src/latin_utf8.py: explicity state iso-8859-1 to unicode translation
	* src/gramps_main.py: handle clearing of tabs better, eliminating
	spurious tabs being added on a complete rebuild of the tabs.

2003-06-25  Tim Waugh  <twaugh@redhat.com>
	* src/plugins/Ancestors.py: Handle page break option.
	* src/Date.py: Make sure range is 0 when it should be.  Dates compare
	differently if only one is a range.

2003-06-24  Don Allingham  <dallingham@users.sourceforge.net>
	* src/SubstKeywords.py: Fixed typo on getName
	* src/plugins/WriteGedcom.py: Allow iso-8859-1 (ANSI) encoding
	* src/plugins/gedcomexport.glade: Allow iso-8859-1 (ANSI) encoding
	* src/docgen/PdfDoc.py: handle page break
	* src/plugins/BookReport.py: move book report to its own category,
	handle page break properly
	* src/plugins/FtmStyleAncestors.py: handle book improvements
	* src/plugins/FtmStyleDescendants.py: handle book improvements
	* src/plugins/IndivSummary.py: handle book improvements, rename
	document styles
	* src/plugins/SimpleBookTitle.py: new page title for book
	
2003-06-24  Tim Waugh  <twaugh@redhat.com>