@@ -1,3 +1,7 @@
+2003-06-27  Tim Waugh  <twaugh@redhat.com>
+	* src/plugins/Ancestors.py: Include source reference notes.  Made
+	source citation optional.  Adjusted styles.
+
 2003-06-26  Don Allingham  <dallingham@users.sourceforge.net>
 	* src/plugins/IndivComplete.py: make compatible with BookReport
 	* src/plugins/IndivSummary.py: changed style names to use colon qualifiers
